--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ header {
 }
 
 .project-card {
-    position: relative;
+    position:static;
     overflow: hidden;
     border-radius: 0;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -348,9 +348,7 @@ header {
     text-align: center;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    padding: 0 10px;
-
-    /* Propiedades de posicionamiento y z-index para visibilidad sobre overlay */
+    padding: 0 10px;/* Propiedades de posicionamiento y z-index para visibilidad sobre overlay */
     position: absolute;
     /* Posiciona el título sobre la card */
     top: 50%;
@@ -362,9 +360,6 @@ header {
     width: 100%;
     /* Para que el text-align center funcione bien */
     box-sizing: border-box;
-    /* Para que el padding no desborde */
-
-    /* Control de visibilidad para cuando la tarjeta no tiene hover */
     opacity: 0;
     /* Inicialmente oculto para que aparezca con el hover */
     transition: opacity 0.3s ease;
@@ -392,7 +387,7 @@ header {
 .project-image {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     /* Cambiado a cover para que la imagen ocupe todo el espacio */
     transition: transform 0.5s ease;
 }
@@ -407,7 +402,7 @@ header {
 
 
 .card-1 {
-  background-color: #eeeeee; 
+  background: linear-gradient(135deg, #e1ea7e, #e52e71); /* dirección + colores */
 }
 
 /* ========================================================================= */
@@ -583,6 +578,14 @@ header {
     font-weight: 600;
 }
 
+.project-caption {
+  font-size: 16px;
+  color: #555;
+  margin-top: 10px;
+  line-height: 1.5;
+  text-align: center; /* o left, según preferencia */
+}
+
 .gallery-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -611,6 +614,8 @@ header {
     grid-column: 1 / -1;
 }
 
+
+
 /* Video */
 .project-video {
   width: 80%;
@@ -629,6 +634,16 @@ header {
   color: #999;
   padding: 1rem;
   text-align: center;
+}
+
+.video-description {
+  font-size: 16px;
+  color: #555;
+  margin-top: 12px;
+  text-align: center; /* o left, según preferencia */
+  max-width: 800px; /* o el ancho que quieras */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Cambia el color del fondo del overlay */
