--- a/css/styles.css
+++ b/css/styles.css
@@ -343,28 +343,24 @@ header {
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-
 }
 
 .hero-content {
-    width: 60%;
     text-align: left;
 }
 
 .hero-title {
     font-family: "Manrope", sans-serif;
     width: 100%;
-    font-size: 8rem;
+    font-size: 2.6rem;
     font-weight: 800;
-    letter-spacing: 5px;
-    text-transform: uppercase;
     line-height: 1;
-    color: #161616;
+    color: #4d555b;
     margin: 0 0 20px 0;
 }
 
 .hero-description {
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: 400;
     margin-bottom: 40px;
     line-height: 1.6;
@@ -378,6 +374,7 @@ header {
 }
 
 .image-content img {
+    margin-top: 20%;
     max-width: 100%;
     height: auto;
     max-height: 400px;
