--- a/css/styles.css
+++ b/css/styles.css
@@ -394,13 +394,13 @@ header {
     font-family: "Manrope", sans-serif;
     font-size: 2.5rem;
     margin-bottom: 40px;
-    color: #1d2022;
+    color: #4d555b;
 }
 
 #about-text {
-    font-size: 1.6rem;
-    line-height: 1.8;
-    color: #1d2022;
+    font-size: 1.4rem;
+    line-height: 1.6;
+    color:#4d555b;
     margin-bottom: 20px;
     text-align: left;
 }
@@ -422,7 +422,7 @@ header {
     font-size: 2.5rem;
     text-align: left;
     margin-bottom: 60px;
-    color: #1d2022;
+    color: #4d555b;
 }
 
 .project-grid {
@@ -824,7 +824,7 @@ header {
     font-family: "Manrope", sans-serif;
     font-size: 2.5rem;
     margin-bottom: 40px;
-    color: #1d2022;
+    color: #4d555b;
     text-align: center;
 }
 
@@ -839,7 +839,7 @@ header {
 
 #skills-list li {
     background-color: #fcfaf7;
-    color: #1d2022;
+    color:  #1d2022b;
     padding: 10px 20px;
     border: 1px solid #4d555b;
     border-radius: 25px;
@@ -872,7 +872,7 @@ header {
     font-family: "Manrope", sans-serif;
     font-size: 2.5rem;
     margin-bottom: 30px;
-    color: #1d2022;
+    color: #4d555b;
     text-align: center;
     /* Asegura que el título H2 esté centrado */
 }
@@ -886,7 +886,7 @@ header {
 }
 
 #contact p a {
-    color: #1d2022;
+    color:#4d555b;
     /* Color de link más oscuro para contraste */
     font-weight: 600;
     /* Hace los links más destacados */
@@ -1269,7 +1269,7 @@ footer,
     }
 
     .hero-description {
-        font-size: 1.3rem; /* Ligeramente más pequeño para móviles */
+        font-size: 1.4rem; /* Ligeramente más pequeño para móviles */
         margin-bottom: 20px;
         padding: 0 0rem;
         text-align: left;
@@ -1377,7 +1377,7 @@ footer,
         font-size: 1.2rem; /* Reduce el tamaño del texto del cuerpo */
         margin-top: 5%; /* Menos margen superior */
         margin-bottom: 30px; /* Menos margen inferior */
-        padding: 2% 2%; /* Añade padding horizontal */
+        
     }
 
     .project-content-section h2 {
